tests + record + dto